cdk/cdk.out/kamiwaza-job-6.template.json
{
 "Resources": {
  "KamiwazaVPCB2EC84F0": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/Resource"
   }
  },
  "KamiwazaVPCPublicSubnet1Subnet16CC561E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "KamiwazaVPCB2EC84F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet1/Subnet"
   }
  },
  "KamiwazaVPCPublicSubnet1RouteTable70CBF568": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "KamiwazaVPCB2EC84F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet1/RouteTable"
   }
  },
  "KamiwazaVPCPublicSubnet1RouteTableAssociationB853504B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "KamiwazaVPCPublicSubnet1RouteTable70CBF568"
    },
    "SubnetId": {
     "Ref": "KamiwazaVPCPublicSubnet1Subnet16CC561E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "KamiwazaVPCPublicSubnet1DefaultRoute211374BB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "KamiwazaVPCIGW1C2B07AA"
    },
    "RouteTableId": {
     "Ref": "KamiwazaVPCPublicSubnet1RouteTable70CBF568"
    }
   },
   "DependsOn": [
    "KamiwazaVPCVPCGWC343B2BC"
   ],
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "KamiwazaVPCPublicSubnet1EIPC397BDDA": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet1/EIP"
   }
  },
  "KamiwazaVPCPublicSubnet1NATGatewayEC5E1C3B": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "KamiwazaVPCPublicSubnet1EIPC397BDDA",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "KamiwazaVPCPublicSubnet1Subnet16CC561E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "KamiwazaVPCPublicSubnet1DefaultRoute211374BB",
    "KamiwazaVPCPublicSubnet1RouteTableAssociationB853504B"
   ],
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet1/NATGateway"
   }
  },
  "KamiwazaVPCPublicSubnet2Subnet59CC51FB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "KamiwazaVPCB2EC84F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet2/Subnet"
   }
  },
  "KamiwazaVPCPublicSubnet2RouteTable89EFDB9E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "KamiwazaVPCB2EC84F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet2/RouteTable"
   }
  },
  "KamiwazaVPCPublicSubnet2RouteTableAssociation5BCF936C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "KamiwazaVPCPublicSubnet2RouteTable89EFDB9E"
    },
    "SubnetId": {
     "Ref": "KamiwazaVPCPublicSubnet2Subnet59CC51FB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "KamiwazaVPCPublicSubnet2DefaultRoute895FE943": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "KamiwazaVPCIGW1C2B07AA"
    },
    "RouteTableId": {
     "Ref": "KamiwazaVPCPublicSubnet2RouteTable89EFDB9E"
    }
   },
   "DependsOn": [
    "KamiwazaVPCVPCGWC343B2BC"
   ],
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "KamiwazaVPCPrivateSubnet1Subnet7F6BFC22": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "KamiwazaVPCB2EC84F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet1/Subnet"
   }
  },
  "KamiwazaVPCPrivateSubnet1RouteTable7B1AC006": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "KamiwazaVPCB2EC84F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet1/RouteTable"
   }
  },
  "KamiwazaVPCPrivateSubnet1RouteTableAssociation0678E6C3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "KamiwazaVPCPrivateSubnet1RouteTable7B1AC006"
    },
    "SubnetId": {
     "Ref": "KamiwazaVPCPrivateSubnet1Subnet7F6BFC22"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "KamiwazaVPCPrivateSubnet1DefaultRouteB08CBC8E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "KamiwazaVPCPublicSubnet1NATGatewayEC5E1C3B"
    },
    "RouteTableId": {
     "Ref": "KamiwazaVPCPrivateSubnet1RouteTable7B1AC006"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "KamiwazaVPCPrivateSubnet2Subnet7E476F41": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "KamiwazaVPCB2EC84F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet2/Subnet"
   }
  },
  "KamiwazaVPCPrivateSubnet2RouteTableA3410DC7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "KamiwazaVPCB2EC84F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet2/RouteTable"
   }
  },
  "KamiwazaVPCPrivateSubnet2RouteTableAssociation07C19ED8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "KamiwazaVPCPrivateSubnet2RouteTableA3410DC7"
    },
    "SubnetId": {
     "Ref": "KamiwazaVPCPrivateSubnet2Subnet7E476F41"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "KamiwazaVPCPrivateSubnet2DefaultRoute65B0BA55": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "KamiwazaVPCPublicSubnet1NATGatewayEC5E1C3B"
    },
    "RouteTableId": {
     "Ref": "KamiwazaVPCPrivateSubnet2RouteTableA3410DC7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "KamiwazaVPCIGW1C2B07AA": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "kamiwaza-job-6/KamiwazaVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/IGW"
   }
  },
  "KamiwazaVPCVPCGWC343B2BC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "KamiwazaVPCIGW1C2B07AA"
    },
    "VpcId": {
     "Ref": "KamiwazaVPCB2EC84F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/VPCGW"
   }
  },
  "KamiwazaVPCRestrictDefaultSecurityGroupCustomResourceC10022AE": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "KamiwazaVPCB2EC84F0",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "916994818137"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaVPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:916994818137:security-group/",
             {
              "Fn::GetAtt": [
               "KamiwazaVPCB2EC84F0",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-916994818137-us-east-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "KamiwazaSGFD941D5B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Kamiwaza job 6",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow SSH",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTPS",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow Docker app ports",
      "FromPort": 8000,
      "IpProtocol": "tcp",
      "ToPort": 8100
     }
    ],
    "VpcId": {
     "Ref": "KamiwazaVPCB2EC84F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaSG/Resource"
   }
  },
  "InstanceRole3CCE2F1D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Description": "IAM role for Kamiwaza EC2 instance (job 6)",
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/InstanceRole/Resource"
   }
  },
  "KamiwazaInstanceInstanceProfileEFBAE96B": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "InstanceRole3CCE2F1D"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaInstance/InstanceProfile"
   }
  },
  "KamiwazaInstance361554A9": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "DeleteOnTermination": true,
       "Encrypted": true,
       "VolumeSize": 30
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "KamiwazaInstanceInstanceProfileEFBAE96B"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.xlarge",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "KamiwazaSGFD941D5B",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "KamiwazaVPCPublicSubnet1Subnet16CC561E"
    },
    "Tags": [
     {
      "Key": "JobId",
      "Value": "6"
     },
     {
      "Key": "ManagedBy",
      "Value": "KamiwazaDeploymentManager"
     },
     {
      "Key": "Name",
      "Value": "test6"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\n\n# Kamiwaza Deployment Configuration\nexport KAMIWAZA_PACKAGE_URL='https://pub-3feaeada14ef4a368ea38717abd3cf7e.r2.dev/kamiwaza_v0.9.2_noble_x86_64_build3.deb'\nexport KAMIWAZA_ROOT='/opt/kamiwaza'\nexport KAMIWAZA_USER='ubuntu'\n\n#!/bin/bash\n#\n# Kamiwaza Full Stack Deployment Script for EC2\n# This script deploys the complete Kamiwaza platform on a fresh EC2 instance\n#\n# Usage: Run as root on EC2 instance startup (via user data)\n# Architecture: Supports A [...]
    }
   },
   "DependsOn": [
    "InstanceRole3CCE2F1D"
   ],
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/KamiwazaInstance/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/3VOy26DMBD8ltyNm5L2A2hURVxaC6pcq8XZJNvAGtnrIIT494rSBPXQ0zx2ZjWpTjfPer2CLiT2cElqqvRQCtiLgi58DmhTPexbq7ZH3putMrGqyZaxYpTJW1jhouAHVDUu/uJlIThLIOT4Hp7Ia24meAPZgWAHvTKeriC4PM5Z0DPeA/OSX5WJgD03yKJKtNGT9DvvYvuz4Y+RcxBgi/PLmY+KoNFD4ebRN7ydjXdHqnEcVYHBRT+VYxDXLPLI/5yMd1c6oH+BgCoLAaUUOBGfpo4BDw0K+km8R2mjjMr0cnb8sNGPT3q9+gpEiY8s1KAuZvwGwfSEjK0BAAA="
   },
   "Metadata": {
    "aws:cdk:path": "kamiwaza-job-6/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "InstanceId": {
   "Description": "EC2 Instance ID",
   "Value": {
    "Ref": "KamiwazaInstance361554A9"
   }
  },
  "PublicIP": {
   "Description": "Public IP address",
   "Value": {
    "Fn::GetAtt": [
     "KamiwazaInstance361554A9",
     "PublicIp"
    ]
   }
  },
  "PrivateIP": {
   "Description": "Private IP address",
   "Value": {
    "Fn::GetAtt": [
     "KamiwazaInstance361554A9",
     "PrivateIp"
    ]
   }
  },
  "SecurityGroupId": {
   "Description": "Security Group ID",
   "Value": {
    "Fn::GetAtt": [
     "KamiwazaSGFD941D5B",
     "GroupId"
    ]
   }
  },
  "VpcId": {
   "Description": "VPC ID (for reuse in future deployments)",
   "Value": {
    "Ref": "KamiwazaVPCB2EC84F0"
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
